--- a/src/App.css
+++ b/src/App.css
@@ -19,25 +19,27 @@
   margin: 10px;
 }
 
-label.signInput {
-  position: relative;
-  left: -2rem;
-  /*margin-right: 5%;*/
-  /*margin-top: 10px;*/
-  /*text-align: right;*/
+@media (min-width: 450px) {
+  label.signInput {
+    position: relative;
+    left: -2rem;
+    /*margin-right: 5%;*/
+    /*margin-top: 10px;*/
+    /*text-align: right;*/
+  }
+
+  label.verify {
+    position: relative;
+    left: -2rem;
+    /*margin-right: 2rem;*/
+  }
 }
+
 
 label.signResult {
   margin-left: 20px;
   margin-right: 20px;
 }
-
-label.verify {
-  position: relative;
-  left: -2rem;
-  /*margin-right: 2rem;*/
-}
-
 
 
 .input {
